@@ -16,6 +16,7 @@ const char *http_status_to_string_data[6][40] = {
         [HTTP_STATUS_NO_CONTENT - 200] = "204 No Content",
         [HTTP_STATUS_RESET_CONTENT - 200] = "205 Reset Content",
         [HTTP_STATUS_PARTIAL_CONTENT - 200] = "206 Partial Content",
+        [HTTP_STATUS_MULTI_STATUS - 200] = "207 Multi-Status",
     },
     [3] = {
         [HTTP_STATUS_MULTIPLE_CHOICES - 300] = "300 Multiple Choices",
@@ -45,6 +46,9 @@ const char *http_status_to_string_data[6][40] = {
         [HTTP_STATUS_UNSUPPORTED_MEDIA_TYPE - 400] = "415 Unsupported Media Type",
         [HTTP_STATUS_REQUESTED_RANGE_NOT_SATISFIABLE - 400] = "416 Requested Range Not Satisfiable",
         [HTTP_STATUS_EXPECTATION_FAILED - 400] = "417 Expectation failed",
+        [HTTP_STATUS_UNPROCESSABLE_ENTITY - 400] = "422 Unprocessable Entity",
+        [HTTP_STATUS_LOCKED - 400] = "423 Locked",
+        [HTTP_STATUS_FAILED_DEPENDENCY - 400] = "424 Failed Dependency",
         [HTTP_STATUS_PRECONDITION_REQUIRED - 400] = "428 Precondition Required",
         [HTTP_STATUS_TOO_MANY_REQUESTS - 400] = "429 Too Many Requests",
         [HTTP_STATUS_REQUEST_HEADER_FIELDS_TOO_LARGE - 400] = "431 Request Header Fields Too Large",
@@ -56,6 +60,7 @@ const char *http_status_to_string_data[6][40] = {
         [HTTP_STATUS_SERVICE_UNAVAILABLE - 500] = "503 Service Unavailable",
         [HTTP_STATUS_GATEWAY_TIMEOUT - 500] = "504 Gateway Timeout",
         [HTTP_STATUS_HTTP_VERSION_NOT_SUPPORTED - 500] = "505 HTTP Version Not Supported",
+        [HTTP_STATUS_INSUFFICIENT_STORAGE - 500] = "507 Insufficient Storage",
         [HTTP_STATUS_NETWORK_AUTHENTICATION_REQUIRED - 500] = "511 Network Authentication Required",
     },
 };
